package com.example.demo.domain.surcharge.seat;

import com.example.demo.domain.fare.Yen;

public interface Seat {
    Yen getSeatSurcharge();
}
